adjust DTO Mapper